also flex crops to avoid scrollbars

--- a/kahuna/public/stylesheets/main.css
+++ b/kahuna/public/stylesheets/main.css
@@ -324,6 +324,7 @@ z-index
 }
 
 html {
+    overflow-x: hidden;
     font: 62.5%/1.5 "Open Sans", sans-serif;
 }
 
@@ -1906,7 +1907,7 @@ FIXME: what to do with touch devices
 }
 
 .image-details--scroll {
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
@@ -1917,11 +1918,11 @@ FIXME: what to do with touch devices
     border-left: none;
     position: relative;
     height: calc(100vh - 50px); /* viewport - top-bar */
+    display: flex;
+    flex-direction: column;
 }
 
 .image-details__delete-crops {
-    position: absolute;
-    bottom: 0;
     width: 100%;
 }
 
